job prefix and misc fixes

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_marshal.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_marshal.yml
@@ -33,6 +33,8 @@
         RMCSkillEndurance: 3
         RMCSkillJtac: 3
     - type: SquadArmorWearer
+    - type: JobPrefix
+      prefix: rmc-job-prefix-bureau-marshal
     - type: RMCPointing
     - type: MarineOrders
   hidden: true
