--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_observer.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_observer.yml
@@ -24,6 +24,8 @@
         RMCSkillMedical: 3
         RMCSkillSurgery: 2
     - type: SquadArmorWearer
+    - type: JobPrefix
+      prefix: rmc-job-prefix-bureau-observer
   hidden: true
 
 - type: entity
