--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Provost/provost_deputy_marshal.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Provost/provost_deputy_marshal.yml
@@ -39,6 +39,8 @@
     - type: ScoutWhitelist
     - type: SniperWhitelist
     - type: PyroWhitelist
+    - type: JobPrefix
+      prefix: rmc-job-prefix-provost-deputy-marshal
   hidden: true
 
 - type: entity
