--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/engineer.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/engineer.yml
@@ -32,6 +32,8 @@
         RMCSkillCqc: 1
         RMCSkillPowerLoader: 2
     - type: SquadArmorWearer
+    - type: JobPrefix
+      prefix: rmc-job-prefix-pmc-engineer
   hidden: true
 
 - type: entity
