--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/gunner.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/gunner.yml
@@ -31,6 +31,8 @@
         RMCSkillEndurance: 3
         RMCSkillJtac: 1
     - type: SquadArmorWearer
+    - type: JobPrefix
+      prefix: rmc-job-prefix-pmc-gunner
   hidden: true
 
 - type: entity
