--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/pizza.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/pizza.yml
@@ -18,6 +18,8 @@
     - type: Skills
       skills:
         RMCSkillVehicles: 1
+    - type: JobPrefix
+      prefix: rmc-job-prefix-pizza
   hasIcon: false
   hidden: true
 
