--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_deputy.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/CMB/bureau_deputy.yml
@@ -31,6 +31,8 @@
         RMCSkillJtac: 1
         RMCSkillEndurance: 3
     - type: SquadArmorWearer
+    - type: JobPrefix
+      prefix: rmc-job-prefix-bureau-deputy
   hidden: true
 
 - type: entity
