--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Provost/provost_enforcer.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Provost/provost_enforcer.yml
@@ -22,6 +22,8 @@
         RMCSkillFireman: 2
         RMCSkillMeleeWeapons: 1
         RMCSkillPolice: 2
+    - type: JobPrefix
+      prefix: rmc-job-prefix-provost-enforcer
   hidden: true
 
 - type: entity
