--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Royal/royal_smart_gun_operator.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Royal/royal_smart_gun_operator.yml
@@ -29,6 +29,8 @@
         RMCSkillJtac: 1
         RMCSkillSmartGun: 1
         RMCSkillVehicles: 1
+    - type: JobPrefix
+      prefix: rmc-job-prefix-rmc-sgo
   hasIcon: false
   hidden: true
 
