--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/leader.yml
@@ -40,6 +40,8 @@
         sprite: _RMC14/Interface/cm_job_icons.rsi
         state: upp_sl_a
     - type: RMCPointing
+    - type: JobPrefix
+      prefix: rmc-job-prefix-spp-leader
   hidden: true
 
 - type: entity
