--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/specialist.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/SPP/specialist.yml
@@ -30,6 +30,8 @@
         RMCSkillMeleeWeapons: 1
         RMCSkillSpecialistWeapons: 1
     - type: SquadArmorWearer
+    - type: JobPrefix
+      prefix: rmc-job-prefix-spp-specialist
   hidden: true
 
 - type: entity
