--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/leader.yml
@@ -40,6 +40,8 @@
         sprite: _RMC14/Interface/cm_job_icons.rsi
         state: pmc_ld
     - type: RMCPointing
+    - type: JobPrefix
+      prefix: rmc-job-prefix-pmc-leader
   hidden: true
 
 - type: entity
