--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/medic.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/medic.yml
@@ -31,6 +31,8 @@
         RMCSkillSurgery: 1
         RMCSkillEndurance: 3
     - type: SquadArmorWearer
+    - type: JobPrefix
+      prefix: rmc-job-prefix-pmc-medic
   hidden: true
 
 - type: entity
