--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/site_director.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/WeYa/site_director.yml
@@ -33,6 +33,8 @@
         RMCSkillEndurance: 3
         RMCSkillJtac: 4
         RMCSkillExecution: 1
+    - type: JobPrefix
+      prefix: rmc-job-prefix-pmc-director
   hidden: true
 
 - type: entity
