--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Survivor/colony_synth.yml
@@ -104,7 +104,7 @@
     jumpsuit: RMCJumpsuitSynthetic
     gloves: CMHandsInsulated
     shoes: RMCShoesWhite
-    id: RMCIDCardSynth
+    id: RMCIDCardSynthColony
     ears: RMCHeadsetSynth
     belt: CMBeltUtilityFilled
 
