--- a/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_construction_actions.yml
+++ b/Resources/Prototypes/_RMC14/Actions/Xeno/xeno_construction_actions.yml
@@ -102,6 +102,7 @@
   id: CMGuidebookActionXenoOrderConstruction
   name: Order Construction
   description: Starts construction of an important hive structure.
+  categories: [ HideSpawnMenu ]
   components:
     - type: Sprite
       state: morph_resin
