Make more roles trackable

--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Freelancers/leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Freelancers/leader.yml
@@ -15,6 +15,7 @@
   - type: ConditionalSpawner
     prototypes:
     - RMCRandomHumanoidFreelancerLeader
+  - type: RMCTrackable
 
 - type: entity
   id: RMCRandomHumanoidFreelancerLeader
