--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Provost/provost_team_leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Other/Provost/provost_team_leader.yml
@@ -32,6 +32,7 @@
     - type: JobPrefix
       prefix: rmc-job-prefix-provost-team-leader
     - type: MarineOrders
+    - type: RMCTrackable
   hidden: true
 
 - type: entity
