Add more trackers to headsets

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/provost_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/provost_headsets.yml
@@ -19,3 +19,12 @@
     - MarineJTAC
   - type: RMCHeadset
     radioTextIncrease: 3
+  - type: GrantSquadLeaderTracker
+    defaultRole: CMProvostTeamLeader
+    trackableRoles:
+    - CMProvostMarshal
+    - CMProvostDeputyMarshal
+    - CMProvostChiefInspector
+    - CMProvostInspector
+    - CMProvostTeamLeader
+    - CMProvostAdvisor
