--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/spp_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/spp_headsets.yml
@@ -94,6 +94,9 @@
   id: RMCHeadsetSPPAbstract
   components:
   - type: GrantSquadLeaderTracker
+    defaultRole: RMCSPPLeader
+    trackableRoles:
+    - RMCSPPLeader
   - type: GrantTacMapAlert
 
 - type: entity
