--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/distress_headsets.yml
@@ -47,8 +47,13 @@
       - CMEncryptionKeyCommon
       - RMCEncryptionKeyLiaison
   - type: GrantMarineIcons
-  - type: GrantSquadLeaderTracker
   - type: GrantTacMapAlert
+  - type: GrantSquadLeaderTracker
+    defaultRole: RMCPMCLeader
+    trackableRoles:
+    - RMCPMCDirector
+    - RMCPMCLeader
+    - CMLiaison
 
 - type: entity
   parent: RMCHeadsetDistressPMC
@@ -75,6 +80,12 @@
   - type: GrantTacMapAlert
   - type: RMCHeadset
     radioTextIncrease: 3
+  - type: GrantSquadLeaderTracker
+    defaultRole: RMCPMCDirector
+    trackableRoles:
+    - RMCPMCDirector
+    - RMCPMCLeader
+    - CMLiaison
 
 # For Duke's Dozen/Freelancer
 - type: entity
