--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/marine_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/marine_headsets.yml
@@ -3,6 +3,13 @@
   id: RMCHeadsetMarine
   components:
   - type: GrantSquadLeaderTracker
+    defaultRole: CMSquadLeader
+    trackableRoles:
+    - CMSquadLeader
+    - CMFireteamLeader
+    - CMSeniorEnlistedAdvisor
+    extraModes:
+    - PrimaryLandingZone
 
 # Alpha
 - type: entity
@@ -33,6 +40,15 @@
       - CMEncryptionKeySquadLeader
   - type: RMCHeadset
     radioTextIncrease: 3
+  - type: GrantSquadLeaderTracker
+    defaultRole: CMSquadLeader
+    trackableRoles:
+    - CMCommandingOfficer
+    - CMExecutiveOfficer
+    - CMSquadLeader
+    - CMFireteamLeader
+    extraModes:
+    - PrimaryLandingZone
 
 - type: entity
   parent: CMHeadsetAlpha
@@ -105,6 +121,15 @@
       - CMEncryptionKeySquadLeader
   - type: RMCHeadset
     radioTextIncrease: 3
+  - type: GrantSquadLeaderTracker
+    defaultRole: CMSquadLeader
+    trackableRoles:
+    - CMCommandingOfficer
+    - CMExecutiveOfficer
+    - CMSquadLeader
+    - CMFireteamLeader
+    extraModes:
+    - PrimaryLandingZone
 
 - type: entity
   parent: CMHeadsetBravo
@@ -177,6 +202,15 @@
       - CMEncryptionKeySquadLeader
   - type: RMCHeadset
     radioTextIncrease: 3
+  - type: GrantSquadLeaderTracker
+    defaultRole: CMSquadLeader
+    trackableRoles:
+    - CMCommandingOfficer
+    - CMExecutiveOfficer
+    - CMSquadLeader
+    - CMFireteamLeader
+    extraModes:
+    - PrimaryLandingZone
 
 - type: entity
   parent: CMHeadsetCharlie
@@ -249,6 +283,15 @@
       - CMEncryptionKeySquadLeader
   - type: RMCHeadset
     radioTextIncrease: 3
+  - type: GrantSquadLeaderTracker
+    defaultRole: CMSquadLeader
+    trackableRoles:
+    - CMCommandingOfficer
+    - CMExecutiveOfficer
+    - CMSquadLeader
+    - CMFireteamLeader
+    extraModes:
+    - PrimaryLandingZone
 
 - type: entity
   parent: CMHeadsetDelta
@@ -336,6 +379,15 @@
       - CMEncryptionKeyJTAC
   - type: RMCHeadset
     radioTextIncrease: 2
+  - type: GrantSquadLeaderTracker
+    defaultRole: CMSquadLeader
+    trackableRoles:
+    - CMCommandingOfficer
+    - CMExecutiveOfficer
+    - CMSquadLeader
+    - CMFireteamLeader
+    extraModes:
+    - PrimaryLandingZone
 
 - type: entity
   parent: CMHeadsetEcho
@@ -408,6 +460,15 @@
       - CMEncryptionKeyJTAC
   - type: RMCHeadset
     radioTextIncrease: 2
+  - type: GrantSquadLeaderTracker
+    defaultRole: CMSquadLeader
+    trackableRoles:
+    - CMCommandingOfficer
+    - CMExecutiveOfficer
+    - CMSquadLeader
+    - CMFireteamLeader
+    extraModes:
+    - PrimaryLandingZone
 
 - type: entity
   parent: CMHeadsetFoxtrot
