--- a/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/fireteam_leader.yml
+++ b/Resources/Prototypes/_RMC14/Roles/Jobs/Marines/fireteam_leader.yml
@@ -50,6 +50,7 @@
       icon:
         sprite: _RMC14/Interface/map_blips.rsi
         state: tl
+    - type: RMCTrackable
 
 - type: startingGear
   id: CMGearFireteamLeader
