--- a/Resources/Prototypes/_RMC14/Entities/Structures/Storage/morgue.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Storage/morgue.yml
@@ -27,7 +27,7 @@
   - type: ReceiverXenoClaws 
     maxHealth: 100
     minimumClawStrength: Normal
-    HitsToDestroy: 4 # todo allow only xenos to do melee damage to this, without forcing a limit, choose 4 hits or "25"dmg, since thats on the low end of what xenos can do.
+    hitsToDestroy: 4 # todo allow only xenos to do melee damage to this, without forcing a limit, choose 4 hits or "25"dmg, since thats on the low end of what xenos can do.
 
 - type: entity
   parent: [ Morgue, RMCMorgueBase ]
