Fix yaml linter error

--- a/Resources/Prototypes/_RMC14/Entities/Structures/Storage/morgue.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Structures/Storage/morgue.yml
@@ -4,7 +4,7 @@
   components:
   - type: Damageable
     damageContainer: StructuralMarine
-    damageModifierSet: StructuralMarine    
+    damageModifierSet: StructuralMarine
   - type: Destructible
     thresholds:
     - trigger:
@@ -24,10 +24,10 @@
     blacklist:
       components:
       - Xeno
-  - type: ReceiverXenoClaws 
+  - type: ReceiverXenoClaws
     maxHealth: 100
     minimumClawStrength: Normal
-    HitsToDestroy: 4 # todo allow only xenos to do melee damage to this, without forcing a limit, choose 4 hits or "25"dmg, since thats on the low end of what xenos can do.
+    hitsToDestroy: 4 # todo allow only xenos to do melee damage to this, without forcing a limit, choose 4 hits or "25"dmg, since thats on the low end of what xenos can do.
 
 - type: entity
   parent: [ Morgue, RMCMorgueBase ]
