Add synth trackers

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/ship_headsets.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Ears/ship_headsets.yml
@@ -487,3 +487,11 @@
       - RMCEncryptionKeyMarineCommand
   - type: HeadsetMultiBroadcast
     cooldown: 60
+  - type: GrantSquadLeaderTracker
+    defaultRole: CMSquadLeader
+    trackableRoles:
+    - CMCommandingOfficer
+    - CMExecutiveOfficer
+    - CMSquadLeader
+    extraModes:
+    - PrimaryLandingZone
