linter fail is real

--- a/Resources/Prototypes/_RMC14/Entities/Clothing/Uniforms/marines.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Clothing/Uniforms/marines.yml
@@ -418,6 +418,7 @@
   - type: Sprite
     sprite: _RMC14/Objects/Clothing/Uniforms/Synthetic/outdated_synth.rsi
 
+- type: entity
   parent: RMCMarineUniformBase
   id: RMCJumpsuitSynthetic
   name: UNMC Support Uniform
