--- a/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Revolvers/mateba.yml
+++ b/Resources/Prototypes/_RMC14/Entities/Objects/Weapons/Guns/Revolvers/mateba.yml
@@ -18,7 +18,8 @@
     tags:
     - Sidearm
     - RMCRevolver
-    - RMCMateba
+  - type: Corrodible
+    isCorrodible: false
   - type: RevolverAmmoProvider
     whitelist:
       tags:
