--- a/Resources/Prototypes/_RMC14/Guidebook/rmc_guidebook.yml
+++ b/Resources/Prototypes/_RMC14/Guidebook/rmc_guidebook.yml
@@ -95,7 +95,11 @@
   id: RMCGuideXenonidStructures
   name: "Xenonid Structures"
   text: "/ServerInfo/Guidebook/_RMC14/RMC14.xml"
+  children:
+  - RMCGuideHiveStructures
+  - RMCGuideResinHoles
 
+  
 - type: guideEntry
   parent: RMC
   id: RMCGuideRoleRifleman
